optimized navigation on pages

--- a/html/pz.html
+++ b/html/pz.html
@@ -11,18 +11,7 @@
         <div class="title">
             Навчальна кафедра платформи ІКС
         </div>
-        <div class="navigation">
-            <div class="navigation_list">
-                <div id="main_button" class="nav_button" onclick="main_page()">Головна</div>
-                <div id="main_info_button" class="nav_button" onclick="teachers_page()">Наші викладачі</div>
-                <div id="lectures" class="nav_button" onclick="lectures_page()">Лекції</div>
-                <div id="PZ" class="nav_button clicked" onclick="pz_page()">Практичні заняття</div>
-                <div id="tests" class="nav_button" onclick="tests_page()">Тести</div>
-                <div id="second_info_button" class="nav_button" onclick="info_page()">Корисні матеріали</div>
-                <div id="student" class="nav_button" onclick="student_page()">Вхід</div>
-                <div id="contacts" class="nav_button" onclick="contacts_page()">Контакти</div>
-            </div>
-        </div>
+        <div class="navigation" id="navigation"></div>
     </header>
     <div class="slider_main">
         <div class="slider_header_1">Приклад вирішення завдань</div>
@@ -909,6 +898,7 @@
         </div>
     </footer>
     <script src="../js/index.js"></script>
+    <script src="../js/navigation.js"></script>
     <script src="../js/slider.js"></script>
 </body>
 </html>
