--- a/html/lectures.html
+++ b/html/lectures.html
@@ -17,7 +17,7 @@
         Лекції з МОЛ та КЛ
     </div>
     <img src="../Photos/bf2ca9eb0774eff1b770a387fb0f52d4.jpg" class="image_lectures">
-    <div>
+    <div id="lectures">
         <div id="MOL" class="nav_button MOL" onclick="molPage()"> Математичні основи лінгвістики </div>
         <div id="KL" class="nav_button KL" onclick="klPage()"> Квантитативна лінгвістика </div>
     </div>
